# streamlit-project

./: pyproject.toml  requirements.txt
src/datasets/: Cidades.csv  Empresas.csv  Vendas.csv  dados_grafico_barras.csv
src/streamlit-project/: main.py  single_page.py  sqlite.py  test.py
