[tool.poetry]
name = "streamlit-project"
version = "0.1.0"
description = ""
authors = ["richardpk15 <138160715+richardpk15@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
pandas = "^2.2.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
